[package]
name = "accessible"
version = "0.1.1"
edition = "2021"
description = "Non-trapping memory readability probes for FFI sanity checks"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/gzz2000/accessible-rs"
homepage = "https://github.com/gzz2000/accessible-rs"
keywords = ["ffi", "safety", "memory", "diagnostics"]
categories = ["memory-management", "development-tools::ffi"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
cuda = ["cust_raw"]

[dependencies]
libc = "0.2"

[dependencies.cust_raw]
version = "0.11"
optional = true

[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52.0", features = ["Win32_Foundation", "Win32_System_Diagnostics_Debug", "Win32_System_Threading"] }
